1.2.7 (27.10.2014):

* Use date from entry rather than calendar widget.
  Closes bug #183 (Date not used)
* Use icons for 'email as PDF' and the hand tool designed by Andreas E.
  Closes LP: #1197264 (wrong icons in toolbar)
* + threshold as part of OCR process


1.2.6 (27.09.2014):

* Fix support for tesseract 3.02, broken by commit ae76b3cf.
* Changed 'save text' to extract plain text from hOCR output
* + 'save hOCR', to save hOCR output, where available.
* Fixed logic of automatic selection of blank or dark pages.
* If an error occurs whilst opening a device, remove it from the device list
  and try the next, rather than giving up straight away.
* Added text entry for date on save dialogs.
  Closes feature-requests #81 (option to manualy keyin date (or at least year)
* Added device blacklist
* Fixed add paper button. Closes bug #178 (unable to add geometries)
* Increase maximum page number to 9999
  Feature request 82 (Scanning documents that are 1000 pages or more)


1.2.5 (17.05.2014):

* Fix today button on date dialog saving PDF
  Closes bug #171 "Today" button in calendar jumps to February 1th, 1970
* Fix resolution when processing non-standard sized images with unpaper
* Speed up downsample option by using imagemagick sample instead of resize
* Remove unnecessary decode_utf8() call causing
  'Cannot decode string with wide characters' error in Perl 5.18.
* Add support for tesseract 3.03.
  Closes bug #173 "v1.2.4 doesn't display any output"
* Fix bug writing images with quotes in filename
  Closes bug #174 "Fail to save file when target folder has quote in filename"
* Fix setting options which don't cause a reload.
  Closes bug #168 (Resolution Errors on Multiple Scanners)
  Closes bug #170 (Format A2 in PDF properties despite having chosen A4 while scanning)
  Closes Debian bug #742233 (wrong resolution)
  Closes LP: #1304484 (resolution incorrect, saved pdf far too large)


1.2.4 (26.03.2014):

* Tie PageRange widgets together