@@ -178,6 +178,7 @@ t/152_save_utf8.t
 t/153_save_hocr_as_text.t
 t/154_save_hocr.t
 t/155_save_text_as_hocr.t
+t/156_save_hocr_with_encoding.t
 t/161_import_TIFF.t
 t/162_import_ppm.t
 t/163_import_pdf.t
