@@ -5,6 +5,7 @@
 * Use icons for 'email as PDF' and the hand tool designed by Andreas E.
   Closes LP: #1197264 (wrong icons in toolbar)
 * + threshold as part of OCR process
+* Fix bug saving encoded characters in hOCR
 
 
 1.2.6 (27.09.2014):
